# Eng_Job_finder

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml  run.bat
.github/workflows/: weekly.yml
.squad/: .last-commit-sha  ceremonies.md  decisions.md  routing.md  team.md
.squad/casting/: history.json  policy.json  registry.json
.squad/log/: 2026-06-12T1630-mvp-plan-fanout.md  2026-06-12T1830-implementation-sprint-1.md  2026-06-12T1845-tommy-lockout-patch.md  2026-06-12T19-35-sprint-2-adapters.md  2026-06-15T13-50-v02-query-slate-sprint.md
.squad/orchestration-log/: 2026-06-12T1630Z-ada.md  2026-06-12T1630Z-arthur.md  2026-06-12T1630Z-coordinator.md  2026-06-12T1630Z-michael.md  2026-06-12T1630Z-polly.md  2026-06-12T1630Z-tommy.md  2026-06-12T1730Z-tommy.md  (+19 more)
data/: .gitkeep  mechpm.sqlite
reports/: 2026-06-12-SAMPLE.md  2026-06-15.html  2026-06-16.html  2026-06-17.html  2026-06-18.html  2026-06-19.html  2026-06-19.md  2026-06-22.html  2026-06-23.html  2026-06-26.html  index.html  latest.html
tests/: .test_metrics.json  README.md  __init__.py  acceptance_gate.py  conftest.py  test_adapters_smoke.py  test_arcadis.py  test_ciob_jobs.py  test_config.py  test_construction_jobboard.py  test_dedup.py  test_e2e.py  test_ejl_regression.py  test_extractor.py  test_filters.py  test_html_report.py  test_index_render.py  test_kier.py  test_laingorourke.py  test_madgex.py  test_morson.py  test_next_report_date.py  test_orchestrator.py  test_pipeline_e2e.py  test_railrecruiter.py  test_rate_parser.py  test_rate_period.py  test_report.py  test_volcanic.py
(+256 files in other folders)
